# rubric

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md
rubric/: .gitignore  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md  rubric.toml
rubric/.github/workflows/: ci.yml  release.yml
rubric/docs/: contributing.md  editor-setup.md  todo-baseline.md
rubric/docs/cops/: README.md
rubric/docs/handoffs/: handoff.md
rubric/gem/: LICENSE  Rakefile  rubric-linter.gemspec  rubric-ruby.gemspec  rubric.gemspec
rubric/gem/exe/: rubric
rubric/gem/lib/: rubric.rb
rubric/internals/: duplicate-hash-key.md  fresh-project-results.md  index.md  layout-false-positives.md  rubocop-comparison-process.md  rubocop-diff-session5.md  ship-plan.md  space-around-operators.md  strategy-roadmap.md  unreachable-code-and-negated-if.md
rubric/rubric-cli/: Cargo.toml
rubric/rubric-cli/benches/: rubric_bench.rs
rubric/rubric-cli/src/: config.rs  lsp.rs  main.rs  runner.rs  todo_config.rs
rubric/rubric-cli/tests/: cli_integration_test.rs  fix_integration_test.rs  lsp_test.rs  todo_test.rs
rubric/rubric-core/: Cargo.toml
rubric/rubric-core/src/: apply_fixes.rs  context.rs  directives.rs  lib.rs  rule.rs  types.rs  walker.rs
rubric/rubric-rules/: Cargo.toml
rubric/rubric-rules/src/: lib.rs
rubric/rubric-rules/tests/: access_modifier_declarations_test.rs  accessor_method_name_test.rs  alias_test.rs  ambiguous_block_association_test.rs  ambiguous_operator_test.rs  ambiguous_regexp_literal_test.rs  and_or_test.rs  array_first_last_test.rs  array_intersect_test.rs  ascii_comments_test.rs  assignment_in_condition_test.rs  big_decimal_new_test.rs  binary_operator_with_identical_operands_test.rs  bitwise_operator_in_conditional_test.rs  block_alignment_test.rs  block_comments_test.rs  block_delimiters_test.rs  boolean_symbol_test.rs  case_equality_test.rs  case_indentation_test.rs  case_like_if_test.rs  character_literal_test.rs  circular_argument_reference_test.rs  class_and_module_children_test.rs  class_check_test.rs  class_methods_test.rs  class_vars_test.rs  closing_parenthesis_indentation_test.rs  collection_compact_test.rs  collection_methods_test.rs  combined_comparison_test.rs  comment_annotation_test.rs  comparable_clamp_test.rs  condition_position_test.rs  conditional_assignment_test.rs  constant_definition_in_block_test.rs  (+214 more)
rubric/scripts/: bump-version.sh
(+728 files in other folders)
