[package]
name    = "rubric-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rubric-core  = { path = "../rubric-core" }
rubric-rules = { path = "../rubric-rules" }
clap         = { workspace = true }
anyhow       = { workspace = true }
walkdir      = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
serde_yaml   = { workspace = true }

[dev-dependencies]
tempfile  = "3"
criterion = { workspace = true }

[[bench]]
name    = "rubric_bench"
harness = false
