[package]
name    = "rubric-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rubric-core  = { path = "../rubric-core" }
rubric-rules = { path = "../rubric-rules" }
clap         = { workspace = true }
anyhow       = { workspace = true }
walkdir      = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
serde_yaml   = { workspace = true }
tower-lsp    = "0.20"
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
async-trait  = "0.1"
serde_json   = "1"

[dev-dependencies]
tempfile   = "3"
criterion  = { workspace = true }
serde_json = "1"

[[bench]]
name    = "rubric_bench"
harness = false
